# Ardadv

./: .project  CMakeLists.txt  Configure.sh  ReadMe.txt
Test/Test00/Lights/: Lights.ino
device/: .project  CMakeLists.txt
device/actuators/: CMakeLists.txt
device/actuators/motor/: CMakeLists.txt  Motor.cpp  Motor.h
device/actuators/motor/test/: CMakeLists.txt  Test.cpp
device/cmake/modules/: FindArduino.cmake
device/platform/: CMakeLists.txt
device/platform/dfrobot/: CMakeLists.txt
device/platform/dfrobot/manual/: CMakeLists.txt  Manual.cpp  Manual.h
device/platform/dfrobot/manual/test/: CMakeLists.txt
device/platform/dfrobot/manual/test01/: CMakeLists.txt  Test.cpp
device/platform/dfrobot/manual/test02/: CMakeLists.txt  Test.cpp
device/platform/dfrobot/manual/test03/: CMakeLists.txt  Test.cpp
device/platform/dfrobot/manual/test04/: CMakeLists.txt  Test.cpp
device/platform/dfrobot/state/: CMakeLists.txt  State.cpp  State.h
device/platform/dfrobot/state/test01/: CMakeLists.txt  Test.cpp
device/sensors/: CMakeLists.txt
device/sensors/accelerometer/: Accelerometer.cpp  Accelerometer.h  CMakeLists.txt
device/sensors/accelerometer/test/: CMakeLists.txt  Layout.graffle  Test.cpp
device/sensors/button/: Button.cpp  Button.h  CMakeLists.txt
device/sensors/button/test/: CMakeLists.txt  Layout.graffle  Test.cpp
device/sensors/common/: Pin.h
device/sensors/encoders/: CMakeLists.txt  Encoders.cpp  Encoders.h
device/sensors/encoders/test/: CMakeLists.txt  Test.cpp
device/sensors/encoders/test/Layout.graffle/: data.plist
device/sensors/gyroscope/: CMakeLists.txt  Gyroscope.cpp  Gyroscope.h
device/sensors/gyroscope/test/: CMakeLists.txt  Test.cpp
device/sensors/gyroscope/test01/: CMakeLists.txt  Layout.graffle  Test.cpp
device/sensors/gyroscope/test02/: CMakeLists.txt  Test.cpp
device/sensors/gyroscope/test03/: CMakeLists.txt  Layout.graffle  Test.cpp
device/sensors/magnetometer/: CMakeLists.txt  Magnetometer.cpp  Magnetometer.h
device/sensors/magnetometer/test/: CMakeLists.txt  Test.cpp
device/sensors/ultrasonic/: CMakeLists.txt  Ultrasonic.cpp  Ultrasonic.h
device/sensors/ultrasonic/test/: CMakeLists.txt  Test.cpp
device/sensors/ultrasonic/test/Layout.graffle/: data.plist
device/sensors/ultrasonic/test01/: CMakeLists.txt  Test.cpp
device/sensors/ultrasonic/test02/: CMakeLists.txt  Test.cpp
host/: .project  CMakeLists.txt  ReadMe.txt
host/accviewer/: AxisWidget.cpp  AxisWidget.h  CMakeLists.txt  CameraWidget.cpp  CameraWidget.h  CentralWidget.cpp  CentralWidget.h  Main.cpp  MainWindow.cpp  MainWindow.h  RawDataWidget.cpp  RawDataWidget.h  Serial.h
host/accviewer/detail/: SerialPort.cpp  SerialPort.h
host/capture/: CMakeLists.txt  Main.cpp
host/cmake/: FindOpenCV.cmake
host/common/: ArduinoSerial.cpp  ArduinoSerial.h  CMakeLists.txt  Serial.h  SerialPort.cpp  SerialPort.h
host/dfrobot/: CMakeLists.txt  Camera.h  CameraWidget.cpp  CameraWidget.h  ControlsWidget.cpp  ControlsWidget.h  Main.cpp  MainWindow.cpp  MainWindow.h
matlab/: Capture.txt  cutecom.csv  makerange.m  plotgyro.m  plotkalman.m  plotmag.m  plotpos.m
matlab/dfrobot/state/test01/: Capture.txt
ros/dfrobot/: mainpage.dox  manifest.xml
ros/dfrobot/msg/: State.msg
ros/dfrobot/msg_gen/cpp/include/dfrobot/: State.h
ros/dfrobot/msg_gen/lisp/: State.lisp  _package.lisp  _package_State.lisp  dfrobot-msg.asd
ros/dfrobot/src/dfrobot/msg/: _State.py  __init__.py
sensors/: CMakeLists.txt
sensors/accelerometer/: Accelerometer.cpp  Accelerometer.h  CMakeLists.txt
sensors/accelerometer/test/: CMakeLists.txt  Test.cpp
sensors/button/: Button.cpp  Button.h
sensors/button/test/: CMakeLists.txt
sensors/common/: Pin.h
sketches/L3G4200D_Example/: L3G4200D.h  L3G4200D_Example.ino
sketches/sketch_apr01a/: sketch_apr01a.ino
sketches/sketch_apr14a/: sketch_apr14a.ino
sketches/sketch_apr20a/: sketch_apr20a.ino
sketches/sketch_jun03a/: sketch_jun03a.ino
sketches/sketch_mar17a/: sketch_mar17a.ino
sketches/sketch_mar30a/: sketch_mar30a.ino
sketches/sketch_mar30b/: sketch_mar30b.ino
sketches/sketch_may10a/: sketch_may10a.ino
sketches/sketch_may10b/: sketch_may10b.ino
sketches/sketch_may11a/: sketch_may11a.ino
sketches/sketch_may12a/: sketch_may12a.ino
sketches/sketch_may12b/: sketch_may12b.ino
